# trippy-ants

./: .gitignore  Cargo.toml  README.md  bench_rayon.sh  demo.config.toml  plot_bench.jl
.cargo/: config.toml
src/: agent.rs  config.rs  frame.rs  grid.rs  main.rs  palette.rs  simulation.rs
