[package]
name = "trippy-ants"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/kawogi/trippy-ants"
description = "A visually attractive simulation based on cellular automata and particle systems."
license = "MIT"
authors = ["kawogi"]
keywords = ["simulation", "cellular-automata", "particle-systems"]
homepage = "https://github.com/kawogi/trippy-ants"

[dependencies]
chrono = "0.4"
image = "0.25"
minifb = "0.28"
rayon = "1.12.0"
